# Proyecto-Algoritmos

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/services/agente/prompts/: AnalizadorIterativoPrompt.md  AnalizadorTipoPrompt.md  EXAMPLE.md
app/services/agente/src/: agent.py  nodes.py  state.py
app/services/agente/src/models/: gemini.py  geminiIterativo.py  geminiRecursivo.py
app/services/agente/src/tools/: toolsIterativas.py
app/services/agente/src/types/: MERMAID.md  mermaid.py
app/services/analisis-complejidad/src/: analizador_lexico.py  analizador_semantico.py  analizador_sintactico.py  compilador_lark.py
app/services/analisis-complejidad/test/: Prueba1.txt
app/services/analisis_complejidad/src/: analizador_lexico.py  analizador_semantico.py  analizador_sintactico.py  compilador_lark.py
app/services/llm/: main.py
app/services/llm/docs/: GEMINI.md
app/services/llm/src/: gemini.py
app/services/llm/src/config/: config_gemini.py
app/services/llm/src/prompts/: SYSTEMPROMPT.md
docs/: langgraph.drawio  lark.txt
docs/manuales/: Manual_del_Usuario.docx
test/: sumatoria.py  tests_tree.py
test/txt/: binary_search.ayd  fibonacci_recursivo.ayd
