[project]
name = "proyecto-algoritmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"google-genai==1.39.1",
"python-dotenv==1.1.1",
"matplotlib==3.10.6",
"sympy==1.14.0",
"lark==1.3.0",
"langchain",
"langchain-google-genai",
"langgraph"
]
